<resources>
    <string name="app_name">TradeTester</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_joincode">Join Code (Optional)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="action_gosignup">Go Sign Up</string>
    <string name="action_gologin">Go Log In</string>
    <string name="action_no_account">Don\'t have an account?</string>
    <string name="action_have_account">Already have an account?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="owned_header">Stocks you Own</string>
    <string name="watch">Watch</string>
    <string name="stop_watch">Stop Watching</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="zero">0</string>
    <string name="noHistory">Buy this stock to see more information</string>
    <string name="dialogueTitle_buy">How many shares do you want to buy?</string>
    <string name="dialogueTitle_sell">How many shares do you want to sell?</string>
    <string name="symbol">%1$s (%2$s)</string>
    <string name="price">%1$s USD</string>
    <string name="change_price">Today\'s Change: %1$s USD</string>
    <string name="change_pct">Percent Change: %1$s %%</string>
    <string name="today_high">Today\'s high: %1$s USD</string>
    <string name="today_low">Today\'s low: %1$s USD</string>
    <string name="year_high">52 week high: %1$s USD</string>
    <string name="year_low">52 week low: %1$s USD</string>
    <string name="market_cap">Market cap: %1$s </string>
    <string name="shares">Shares: %1$s </string>
    <string name="volume">Volume: %1$s </string>
    <string name="volume_avg">Volume Average: %1$s </string>
    <string name="shares_owned">Shares Owned: %1$s </string>
    <string name="equity">Total Equity: %1$f </string>
    <string name="curReturn">Return: %1$f </string>
    <string name="numTrans">Total Transactions: %1$s </string>
    <string name="totalReturn">Total Return: %1$s </string>
    <string name="bothChanges">%1$s (%2$s%%) </string>


    <string name="watched_header">Stocks you are Watching</string>
    <string name="search_title">Search</string>
    <string name="error_placeholder">Something went wrong</string>
    <string name="no_stock_message">No stocks found. Are you sure you entered a valid symbol?</string>
    <string name="error_reading_data">Something went wrong while trying to get data. Try again later.</string>
    <string name="search_hint">Enter symbol here (ex: MSFT)</string>
    <string name="sign_out">Sign Out </string>
    <string name="your_account">Your Account </string>
    <string name="transactions">Transactions</string>
    <string name="about">About this App</string>
    <string name="home">Home</string>
    <string name="show_news">Tap to show news</string>
    <string name="news_error">Something went wrong when trying to get the news. Try again later.</string>
    <string name="code_error">That code does not exist</string>
    <string name="afterMarketAllowed">The markets are closed, but your account allows after market trading.</string>


    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="line">Line</string>
    <string name="candlestick">Candlestick</string>






    <string name="boughtDate">Bought on %1$s </string>
    <string name="transShares">Number of Shares: %1$s </string>
    <string name="pricePerShare">Price per Share: $%1$s </string>

    <string name="personal_info">Personal Info</string>
    <string name="portfolio">Your Portfolio</string>
    <string name="favorites">Your Favorite Stocks</string>
    <string name="total_assets">Total Assets</string>


    <string name="portfolioItem">%1$s: %2$s shares </string>
    <string name="favoriteItem">%1$s: %2$s shares ordered </string>
    <string name="assetItem">%1$s: $%2$s </string>
    <string name="markets_closed">The markets are currently closed.</string>
    <string name="aboutText">Hello! My name is Zach and I built this app. If you enjoy it, please leave a review on the Google Play Store. If you have
    any feedback, feel free to email me at allegrettidev@gmail.com. The web version of this app can be found at https://tradetester.herokuapp.com/</string>



    <string name="permission_rationale">"Contacts permissions are needed for providing email

        completions."
    </string>
</resources>
