<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_vector"
        app:showAsAction="always" />
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/account"
        android:title="@string/your_account"
        app:showAsAction="never" />
    <item android:id="@+id/transactions"
        android:title="@string/transactions"
        app:showAsAction= "never"/>
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction= "never"/>
    <item android:id="@+id/signout"
        android:title="@string/sign_out"
        app:showAsAction= "never"/>
</menu>